# vesc-rust-poc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  THIS_FUCKING_RAN_AT_LEAST.bin.good  flake.nix
crates/cargo-vescpkg/: Cargo.toml
crates/cargo-vescpkg/src/: alloc_smoke_probe.rs  ble_discovery.rs  btle.rs  build.rs  deploy.rs  lib.rs  loopback.rs  loopback_debug.rs  main.rs  package.rs  package_format.rs  package_install.rs  package_runtime.rs  package_transport.rs  package_wire.rs  snake.rs  snake_deploy.rs  vesc_uart.rs
crates/cargo-vescpkg/tests/: fake_ble_integration.rs  hil_loopback.rs  relocation_contract.rs
crates/vesc-cli/: Cargo.toml
crates/vesc-cli/src/: ble_discovery.rs  btle.rs  deploy.rs  lib.rs  loopback.rs  loopback_debug.rs  main.rs  package_install.rs  package_transport.rs  vesc_uart.rs
crates/vesc-cli/tests/: fake_ble_integration.rs  hil_loopback.rs
crates/vesc-host-cli/: Cargo.toml
crates/vesc-host-cli/src/: ble_discovery.rs  ble_scan.rs  btle.rs  lib.rs  loopback.rs  main.rs  package_install.rs  package_transport.rs  vesc_uart.rs
crates/vesc-host-cli/tests/: fake_ble_integration.rs  hil_loopback.rs
crates/vesc-pkg/: Cargo.toml
crates/vesc-pkg-build/: Cargo.toml
crates/vesc-pkg-build/src/: abi_inventory.rs  cargo_vescpkg_command.rs  hygiene.rs  lib.rs  native_audit.rs  native_build.rs  native_disasm.rs  native_elf_semantics.rs  native_inspect.rs  native_lib_audit.rs  native_lib_audit_disassembly.rs  native_lib_audit_layout.rs  native_lib_audit_symbols.rs  native_lib_baseline.rs  native_lib_link.rs  native_lib_materialize.rs  package_artifacts.rs  package_assets.rs  package_build.rs  package_conversion.rs  package_format.rs  package_runner.rs  package_runtime.rs  package_target.rs  package_wire.rs  rust_package_api_roadmap.rs  symbol_audit.rs  test_support.rs
crates/vesc-pkg-build/tests/: cargo_vescpkg_cli.rs  native_lib_artifacts.rs  package_pipeline.rs
crates/vesc-pkg/src/: abi_inventory.rs  cargo_vescpkg_command.rs  ffi_compare.rs  hygiene.rs  install.rs  lib.rs  manifest.rs  native_audit.rs  native_build.rs  native_disasm.rs  native_elf_semantics.rs  native_inspect.rs  native_lib_audit.rs  native_lib_baseline.rs  native_lib_link.rs  native_lib_materialize.rs  native_lib_toolchain.rs  package.rs  package_artifacts.rs  package_assets.rs  package_build.rs  package_conversion.rs  package_format.rs  package_format_decode.rs  package_golden.rs  package_runner.rs  package_runtime.rs  package_target.rs  package_wire.rs  rust_package_api_roadmap.rs  symbol_audit.rs  test_support.rs
crates/vesc-pkg/tests/: fixtures.rs  golden_packaging.rs  native_lib_artifacts.rs  package_pipeline.rs
crates/vescpkg-build/: Cargo.toml
crates/vescpkg-build/src/: ffi_compare.rs  hygiene.rs  native_audit.rs  native_lib_materialize.rs  package_format.rs
crates/vescpkg-build/tests/: fixtures.rs  golden_packaging.rs  native_lib_artifacts.rs  package_pipeline.rs
crates/vescpkg-rs/: Cargo.toml
crates/vescpkg-rs-build/: Cargo.toml
crates/vescpkg-rs-build/src/: abi_inventory.rs  cargo_vescpkg_command.rs  ffi_compare.rs  hygiene.rs  install.rs  lib.rs  manifest.rs  native_audit.rs  native_build.rs  native_compare.rs  native_elf_semantics.rs  native_lib_audit.rs  native_lib_link.rs  native_lib_materialize.rs  package.rs  package_artifacts.rs  package_assets.rs  package_build.rs  package_conversion.rs  package_format.rs  package_runner.rs  package_target.rs  package_wire.rs  refloat_native_build.rs  refloat_package_assets.rs  rust_package_api_roadmap.rs  test_support.rs
crates/vescpkg-rs-build/tests/: fixtures.rs  golden_packaging.rs  native_lib_artifacts.rs  package_pipeline.rs
crates/vescpkg-rs-sys/: Cargo.toml  build.rs
crates/vescpkg-rs-sys/src/: compile_fail_contracts.md  image.rs  lib.rs  loader.rs  raw.rs  test_support.rs  tests.rs  types.rs  vesc_if.rs
crates/vescpkg-rs-sys/tests/: compile_fail.rs  vesc_if_header_parser.rs
crates/vescpkg-rs-units/: Cargo.toml
crates/vescpkg-rs-units/src/: battery.rs  electrical.rs  gnss.rs  lib.rs  macros.rs  motion.rs  ratio.rs  temperature.rs  tests.rs  time.rs
crates/vescpkg-rs/src/: __macro_support.rs  advanced_foc.rs  ahrs.rs  alloc.rs  audio.rs  bindings.rs  ble_loopback.rs  can_bus.rs  capabilities.rs  commands.rs  compile_fail_contracts.md  eeprom.rs  encoder.rs  extension.rs  firmware.rs  gnss.rs  gpio.rs  imu.rs  init.rs  input.rs  inputs.rs  lbm.rs  lib.rs  lifecycle.rs  lifecycle_core.rs  lifecycle_tests.rs  logging.rs  math.rs  motor.rs  nvm.rs  packet.rs  plot.rs  pwm.rs  runtime.rs  stm32.rs  sync.rs  terminal.rs  test_ffi.rs  test_support.rs  thread.rs  (+1 more)
crates/vescpkg-rs/tests/: ahrs.rs  audio.rs  can.rs  capabilities.rs  clock.rs  commands.rs  compile_fail.rs  eeprom.rs  encoder.rs  firmware_ahrs.rs  gnss.rs  gpio_lease.rs  imu.rs  input.rs  inputs.rs  lisp.rs  logging.rs  motor.rs  nvm.rs  packet.rs  plot.rs  pwm.rs  settings.rs  stm32_pad.rs  sync.rs  terminal.rs  uart.rs
examples/alloc-smoke/: Cargo.toml  build.rs
examples/alloc-smoke/package/: README.md  pkgdesc.qml
examples/alloc-smoke/src/: lib.rs  main.rs
examples/control-loop-smoke/: Cargo.toml  README.md
examples/control-loop-smoke/src/: lib.rs  main.rs
examples/float-out-boy/: Cargo.toml  README.md  build.rs
examples/float-out-boy/package/: README.md  code.lisp  pkgdesc.qml  ui.qml
examples/float-out-boy/src/: beeper.rs  bms.rs  config.rs  extensions.rs  footpad.rs  lcm.rs  leds.rs  main.rs  motor_control.rs  package.rs  wire.rs
examples/loopback/: Cargo.toml  README.md  build.rs
examples/loopback/package/: README.md  code.lisp  pkgdesc.qml
examples/loopback/src/: app_data.rs  clock.rs  config.rs  custom_data.rs  display.rs  extensions.rs  init.rs  lib.rs  main.rs  package.rs  sync.rs  threads.rs
examples/refloat/: Cargo.toml  build.rs
examples/refloat/package/: ui.qml
examples/refloat/src/: app_data.rs  balance_loop.rs  beeper.rs  bms.rs  config.rs  domain.rs  extensions.rs  footpad.rs  init.rs  lcm.rs  leds.rs  lib.rs  main.rs  motor_control.rs  (+6 more)
examples/snake/: Cargo.toml  README.md
(+428 files in other folders)
