[workspace]
members = [
    "crates/vescpkg-rs-sys",
    "crates/vescpkg-rs-units",
    "crates/vescpkg-build-support",
    "crates/vescpkg-rs",
    "crates/vesc-protocol",
    "crates/cargo-vescpkg",
    "examples/loopback",
    "examples/alloc-smoke",
]
default-members = [
    "crates/cargo-vescpkg",
    "examples/loopback",
    "examples/alloc-smoke",
]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
panic = "abort"
