[package]
name = "cargo-vescpkg"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Unofficial Cargo subcommand for building, installing, and debugging Rust VESC package artifacts."

[features]
hil = []

[lints]
workspace = true

[dependencies]
btleplug = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
futures-util = "0.3"
indicatif = "0.18"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
vesc-protocol = { path = "../vesc-protocol" }
uuid = "1"

[dev-dependencies]
tempfile = "3"
