[package]
name = "vesc-cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
btleplug = "0.11.8"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "time"] }
vesc-protocol = { path = "../vesc-protocol" }
vesc-pkg = { path = "../vesc-pkg" }
uuid = "1"

[dev-dependencies]
vesc-pkg = { path = "../vesc-pkg", features = ["test-support"] }
