[package]
name = "vesc-host-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.8"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
vesc-protocol = { path = "../vesc-protocol" }
uuid = "1"

[dev-dependencies]
vesc-pkg-build = { path = "../vesc-pkg-build" }
