[package]
name = "vesc-pkg-build"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
vesc-protocol = { path = "../vesc-protocol" }

[dev-dependencies]
insta = "1"
tempfile = "3"
