[package]
name = "vescpkg-rs-build"
version = "0.1.0"
edition = "2024"
description = "Unofficial host-side library for building and inspecting Rust VESC package artifacts."

[lints]
workspace = true

[features]
test-support = ["dep:tempfile"]

[dependencies]
capstone = "0.12"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
sha2 = "0.10"
tempfile = { version = "3", optional = true }
vesc-protocol = { path = "../vesc-protocol" }

[dev-dependencies]
insta = "1"
tempfile = "3"

[[bin]]
name = "write-golden-fixtures"
path = "src/bin/write-golden-fixtures.rs"
