[package]
name = "vescpkg-rs-sys"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Unofficial raw Rust ABI bindings for VESC package native-library interfaces."

[lints]
workspace = true

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
syn = { version = "2", features = ["full"] }
