[package]
name = "vescpkg-rs-units"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Unofficial embedded unit newtypes for Rust VESC package experiments."

[lints]
workspace = true

[features]
default = []
std = []

[dependencies]
fugit = { version = "0.4", default-features = false }
