[package]
name = "vescpkg-rs"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust package-author API for code running inside VESC packages."

[lints]
workspace = true

[dependencies]
vescpkg-rs-sys = { path = "../vescpkg-rs-sys" }
vesc-protocol = { path = "../vesc-protocol" }
vescpkg-rs-units = { path = "../vescpkg-rs-units", default-features = false }

[features]
test-support = []

[dev-dependencies]
rstest = "0.26"
