[package]
name = "vescpkg-rs"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Unofficial Rust package-author API for code running inside VESC packages."

[lints]
workspace = true

[dependencies]
libm = { version = "0.2", optional = true }
vesc-protocol = { path = "../vesc-protocol" }
vescpkg-rs-sys = { path = "../vescpkg-rs-sys" }
vescpkg-rs-units = { path = "../vescpkg-rs-units", default-features = false }

[features]
alloc = []
math = ["dep:libm"]
test-support = []

[dev-dependencies]
rstest = "0.26"
