[package]
name = "vesc-example-alloc-smoke"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Minimal VESC package proving Rust alloc can use firmware allocation."

publish = false

[package.metadata.vescpkg]
name = "Rust alloc smoke package"

[lints]
workspace = true

[dependencies]
vesc-protocol = { path = "../../crates/vesc-protocol" }
vescpkg-rs = { path = "../../crates/vescpkg-rs", features = ["alloc"] }

[dev-dependencies]
vescpkg-rs = { path = "../../crates/vescpkg-rs", features = ["test-support"] }

[build-dependencies]
vescpkg-build-support = { path = "../../crates/vescpkg-build-support" }
