[package]
name = "vesc-example-loopback"
version = "0.1.0"
edition = "2024"
description = "Unofficial BLE loopback example package for Rust VESC package experiments."

publish = false

[package.metadata.vescpkg]
name = "Rust BLE loopback test package"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "vesc-example-loopback"
path = "src/main.rs"

[dependencies]
vescpkg-rs = { path = "../../crates/vescpkg-rs" }

[features]
test-support = ["vescpkg-rs/test-support"]
