[package]
name = "vesc-example-refloat"
version = "0.1.0"
edition = "2024"
description = "Unofficial Refloat package port for Rust VESC package experiments."

publish = false

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[features]
test-support = ["vescpkg-rs/test-support"]

[dependencies]
libm = "0.2"
vescpkg-rs = { path = "../../crates/vescpkg-rs" }
