[package]
name = "vesc-example-refloat"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Unofficial Refloat package port for Rust VESC package experiments."

publish = false

[package.metadata.vescpkg]
name = "Refloat"
version = "1.2.1"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "vesc-example-refloat"
path = "src/main.rs"

[features]
test-support = ["vescpkg-rs/test-support"]

[dependencies]
vescpkg-rs = { path = "../../crates/vescpkg-rs", features = ["math"] }

[build-dependencies]
vescpkg-build-support = { path = "../../crates/vescpkg-build-support" }

[dev-dependencies]
vescpkg-rs = { path = "../../crates/vescpkg-rs", features = ["math", "test-support"] }
