[package]
name = "vesc-example-snake"
version = "0.1.0"
edition = "2024"
description = "Unofficial Snake example package for Rust VESC package experiments."

publish = false

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
vescpkg-rs = { path = "../../crates/vescpkg-rs" }

[features]
test-support = ["vescpkg-rs/test-support"]
